[gd_scene load_steps=6 format=3 uid="uid://hnpnvnhhi5og"]

[ext_resource type="Script" path="res://Scripts/UI/inventory_ui.gd" id="1_f5xwo"]
[ext_resource type="PackedScene" uid="uid://ccbc4ydmln0e2" path="res://Scenes/item_panel.tscn" id="2_tcq74"]
[ext_resource type="Texture2D" uid="uid://cnx6uqfrpc8r8" path="res://Assets/Icons/LeftHandIcon.png" id="3_55w4i"]
[ext_resource type="Texture2D" uid="uid://cvrwybloy51wm" path="res://Assets/Icons/RightHandIcon.png" id="4_ur3ia"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jpyyb"]
bg_color = Color(0.870588, 0.831373, 0.858824, 1)

[node name="InventoryUI" type="CanvasLayer"]
layer = 0
script = ExtResource("1_f5xwo")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -6.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jpyyb")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 40

[node name="RightHandPanel" parent="MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_tcq74")]
show_behind_parent = true
custom_minimum_size = Vector2(96, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
label = "Right Hand"
texture = ExtResource("4_ur3ia")

[node name="LeftHandPanel" parent="MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_tcq74")]
show_behind_parent = true
custom_minimum_size = Vector2(96, 120)
layout_mode = 2
label = "Left Hand"
texture = ExtResource("3_55w4i")

[node name="VSeparator" type="VSeparator" parent="MarginContainer/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/Panel/MarginContainer/HBoxContainer/VSeparator"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
columns = 5
